feat: Add Splash Screen